# summerizIT

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  environment.yml  package-lock.json
.github/: dependabot.yml
MLmodels/: .gitignore  Dockerfile  app.py  bart.py  docker-compose.yml  mTet.py  main.py  requirements.txt  vinAi.py
MLmodels/configs/: logging_cfg.py
MLmodels/middlewares/: __init__.py  cors.py  http.py
MLmodels/models/: mTet.py
MLmodels/models/Production/: mTet.py
MLmodels/models/Summarize models/: penGold.py
MLmodels/routes/: __init__.py  translate.py
MLmodels/schemas/: __init__.py  request.py
MLmodels/tests/: test.py
MLmodels/utils/: logger.py
client/: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.jsx  Root.jsx  main.jsx
modelAPI/: mTet.py  main.py
modelAPI/models/: notes.txt
models/Summarize models/: Các model tóm tắt.docx  VietAiSummarize.py
server/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
server/Docker/database/: .env.example  README.md
server/src/: server.py
server/src/configs/: __init__.py  config.py  manager.py  server.py
server/src/configs/administrator/: __init__.py  admin.py
server/src/configs/jwt/: __init__.py  jwt.py
server/src/configs/mysql/: __init__.py  mysql.py
server/src/configs/server/: __init__.py  server.py
server/src/configs/settings/: base.py  development.py  environment.py  production.py  staging.py
server/src/controllers/: __init__.py  auth.py  base.py  key.py  summary.py  translate.py  user.py
server/src/controllers/factory/: factory.py
server/src/database/: __init__.py  session.py
server/src/database/mixins/: timestamp.py
server/src/middlewares/: __init__.py  apikey.py  authentication.py  logging.py
server/src/middlewares/dependencies/: __init__.py  apikey.py  authorization.py
server/src/models/: __init__.py  key.py  request.py  result.py  user.py
server/src/models/schemas/: __init__.py  summary.py  token.py  translate.py  user.py
server/src/repositories/: __init__.py  base.py  key.py  summary.py  translate.py  user.py
server/src/routes/: __init__.py
server/src/routes/admin/: __init__.py  admin.py  admin_config.py  provider.py  view_configs.py  views.py
server/src/routes/v1/: __init__.py  auth.py  summary.py  translate.py  user.py
server/src/utils/: __init__.py  jwtHandler.py  pwdHandler.py
server/src/utils/exceptions/: __init__.py  base.py
server/src/utils/services/: docker_up_all.py
server/tests/: conftest.py  test.py
server/tests/configs/: mysql.py
server/tests/controllers/factory/: factory.py  overrides.py
server/tests/repositories/: test_base.py
server/tests/routes/: conftest.py
server/tests/routes/v1/: test_auth.py
server/tests/utils/: test_jwtHandle.py  test_pwdHandler.py
serverai/: main.py
(+44 files in other folders)
