[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
transformers = "^4.40.1"
tiktoken = "^0.6.0"
langchain = "^0.1.16"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
isort = "^5.13.2"
transformers = "^4.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
