[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
starlette-admin = "^0.14.0"
itsdangerous = "^2.2.0"
pytest = "^8.2.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
black = "^24.3.0"
isort = "^5.13.2"

[[tool.poetry.source]]
name = "torch_cuda121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
